fix z-index

--- a/components/catalog-list/catalog-list.pcss
+++ b/components/catalog-list/catalog-list.pcss
@@ -6,7 +6,7 @@
 	top: 0;
 	left: 0;
 	bottom: 0;
-	z-index: 2;
+	z-index: 4;
 	width: 100%;
 	background: rgba(255, 255, 255, 0.85);
 	opacity: 0;
