--- a/components/product-card/product-card.pcss
+++ b/components/product-card/product-card.pcss
@@ -413,3 +413,7 @@
 		line-height: 30px;
 	}
 }
+
+.product-card .fa-vector {
+	z-index: 2;
+}
